feature: Upgrade sbt-pack to 0.22 with Java 24 JVM options
- Upgraded sbt-pack from 0.21 to 0.22
- Added Java 24 specific JVM options using packJvmVersionSpecificOpts:
  - --sun-misc-unsafe-memory-access=allow: Allows unsafe memory access (deprecated in Java 24)
  - --enable-native-access=ALL-UNNAMED: Enables native access for all unnamed modules
- These options prevent warnings and ensure compatibility when running with Java 24

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>